--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
 * {
-    margin: 0;
+     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+@media screen and (max-width: 500px){
+    
 }
 
 body {
@@ -34,6 +38,7 @@ input {
     color: white;
     padding-left: 20px;
 }
+
 
 
 
