--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,6 @@
     box-sizing: border-box;
 }
 
-@media screen and (max-width: 500px){
-    
-}
 
 body {
     background: url("./img/background.png");
@@ -15,12 +12,37 @@ body {
 
 }
 
+
+
+header{
+    margin-top: 35px; 
+    margin-left: 500px;
+    cursor: pointer;
+    
+   
+    
+}
+
+.link-header{
+  display: inline;
+  margin: 15px;
+  padding: 10
+  px;
+  margin-left: 120px;
+   
+    
+}
+
+
+
 img {
-    margin-top: 161px;
-    margin-bottom: 71px;
+    margin-top: 90px;
+   margin-bottom: 20px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    cursor: pointer;
+  
 
 }
 
@@ -37,6 +59,7 @@ input {
     font-size: 14px;
     color: white;
     padding-left: 20px;
+    
 }
 
 
@@ -60,15 +83,66 @@ button {
 
 button:hover {
     background-color: blue;
-    transition: 0.5s;
+    transition: 0.3s;
     cursor: pointer;
 }
-
 
 a {
     display: block;
     text-align: center;
-    margin-left: 190px;
+    margin-left: 150px;
     padding: 0px;
     color: white;
+    
 }
+a:hover {
+    opacity: .3;
+    }
+
+a:active {
+    opacity: 0.7;}
+
+
+
+ 
+
+ .redes-sociais{
+   display: flex;
+   margin-left: 350px;
+   list-style: none;
+  
+   
+   
+
+ }
+
+ .redes-sociais li {
+    align-items: center;
+    text-align: center;
+    width: 100px;
+   padding-left: 60px;
+   padding-right: 50px;
+   margin-bottom: 500px;
+    
+}
+
+li {
+    list-style-type: none;
+    padding-left: 5px;
+    
+}
+
+
+
+
+  
+  
+
+    
+   
+  
+  
+    
+    
+
+
