--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,8 @@ header{
 .link-header{
   display: inline;
   margin: 15px;
-  padding: 10
-  px;
-  margin-left: 120px;
+  padding: 10px;
+  margin-left: px;
    
     
 }
